fixed right panel wrapping

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,8 @@
 .App {
   background-color: #FFFFFF;
   height: 100vh;
-  width: 100vw
+  width: 100vw;
+  white-space: nowrap;
 }
 
 .line-horizontal-white {
